code create html&css for footer and section for header title

--- a/Basic code/index.html
+++ b/Basic code/index.html
@@ -12,8 +12,9 @@
 </head>
 <body onload="init()">
     <header>
+        
         <nav>
-            <img src="./assets/icons/Logo 02.png" alt="logo bestell App" class="logo2">
+            <img src="./assets/icons/Logo 02.png" alt="logo bestell App" class="logo2">   
             <div class="burger-bar" id="burger-bar">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -27,6 +28,23 @@
             </ul>    
         </nav>
     </header>
+    <section class="headerPhoto">
+         <div class="burgerBigLogo">
+                <img src="./assets/icons/burger-big-logo.png" alt="saftiger Burger" >
+            </div>
+    </section>
+
+    <section class="headerTitle">
+        <div class="title">
+            <h1><span class="titleColorOrange">Burger</span><span class="titleColorBlack">Hause</span></h1>
+            <div class="reviews">
+                <img src="./assets/icons/star.png" alt="Stern">
+                <p class="reviewsRating">4,1</p>
+                <p class="reviewsVote">(317)</p> 
+            </div>
+        </div>
+        <p class="headerSlogan">The best of Burgers, Pizza, and Greens, all in one great place.</p>
+    </section>
     <main> 
         <!-- <div class="heroImg">
                         <img src="./assets/icons/burger-big-logo.png" alt="saftiger Burger" class="burgerBigLogo">
