create input text for footer, new code in html and style

--- a/Basic code/index.html
+++ b/Basic code/index.html
@@ -62,6 +62,15 @@
     </main>
             
     <footer>
+        <section>
+            <div class="copyright">
+                <img src="./assets/icons/copyright.png" alt="copyright" class="copyrightImg">
+                <p>2025 BurgerHause</p>
+            </div>
+            <p>Imprint</p>
+            <p>Cookie Preferences</p>
+
+        </section>
 
     </footer>
     
