create new section für court and new style

--- a/Basic code/index.html
+++ b/Basic code/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/font-face.css">
     <link rel="shortcut icon" href="./assets/icons/Logo 01.png" type="image/x-icon">
     <link rel="stylesheet" href="">
+    <script src="./scripts/array.js"></script>
     <script src="./script.js"></script>
     <script src="./scripts/assets.js"></script>
 </head>
@@ -58,8 +59,25 @@
             </div>
           </header>
 
-          <div id="BurgerSandwiches">
-            <p>gerichte</p>
+          <div id="BurgerSandwiches" class="BurgerSandwiches">
+            <div class="court" id="court">
+                <div class="courtImg">
+                    <img src="./assets/img/Veggie_mushroom_black_burger.jpg" alt="Veggie mushroom black burger">
+                </div>
+                <div class="courtTitle">
+                    <h3>Veggie mushroom black burger</h3>
+                    <p>Mixed green salad, Tomatoes, Edamame, Mushrooms</p>
+
+                </div>
+                <div class="buttonPrice">
+                    <p id="courtPrice" class="courtPrice"> 13,90€</p>
+                    <div class="courtButton">
+                        <button id="addBasket" class="buttenAddBasket">Add to basket </button>
+                    </div>
+
+                </div>
+
+            </div>
           </div>
 
         </section>
