The shopping cart has been redesigned with the following features: 1. The shopping cart is now hidden when the website loads. 2. A new function has been created in JavaScript to open and close the shopping cart.

--- a/Basic code/index.html
+++ b/Basic code/index.html
@@ -24,9 +24,9 @@
                 <div class="bar"></div>
             </div>
 
-            <ul class="nav-links" id="nav-links">
+            <ul class="nav-links" id="nav-links-id">
                 <li><a href="#">Login</a></li>
-                <li><a href="#">Basket</a></li>
+                <li><a href="#" id="testOpen">Basket</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>    
         </nav>
@@ -53,11 +53,11 @@
              <section id="newCategories" class="newCategories">
                
             </section>
-            <section id="BasketTemplace"  class="basketSection">  
-                    <section class="basket"> 
+            <section id="BasketTemplaceID"  class="basketSection">  
+                    <section class="basket" id="basket"> 
                         <header class="basketHeader">
                             <div class="buttonBar">
-                                <button onclick="basketClose()" class="closeButton" tabindex="0">X</button>
+                                <button onclick="basketClose()" id="basketClose" class="closeButton" tabindex="0">X</button>
                             </div>
                             <h2>Your Basket</h2>
                         </header>
